# AI-Campaign-Analysis-Recommendation-System-

./: .env.example  PERFORMANCE_MARKETING_SYSTEM.md  README.md  pyproject.toml  requirements.txt
config/: agents.yaml  pipeline.yaml
data/processed/: Normalized_Data_Monday_20_April_2026_17-29.csv  Normalized_Data_Monday_20_April_2026_19-08.csv  Normalized_Data_Monday_20_April_2026_20-44.csv  Normalized_Data_Wednesday_15_April_2026_15-14.csv  normalized_20260414_weekly_20260414T075337_5d292fe7.csv
data/raw/: Meta_Ad_Monday_20_April_2026_17-29.csv  Meta_Ad_Monday_20_April_2026_19-08.csv  Meta_Ad_Monday_20_April_2026_20-44.csv  Meta_Ad_Wednesday_15_April_2026_15-14.csv  Meta_Adset_Monday_20_April_2026_17-29.csv  Meta_Adset_Monday_20_April_2026_19-08.csv  Meta_Adset_Monday_20_April_2026_20-44.csv  Meta_Campaign_Monday_20_April_2026_17-29.csv  Meta_Campaign_Monday_20_April_2026_19-08.csv  Meta_Campaign_Monday_20_April_2026_20-44.csv  Meta_Campaign_Tuesday_14_April_2026_17-58.csv
docs/performance-marketing/: 00-TEAM-HANDOFF-INDEX.md  01-detailed-design.md  02-implementation-guide.md  03-operations-runbook.md  04-testing-and-acceptance.md  05-roadmap-and-ownership.md
output/reports/: Action_Playbook_Monday_20_April_2026_17-29.md  Action_Playbook_Monday_20_April_2026_19-08.md  Action_Playbook_Monday_20_April_2026_20-44.md  Action_Playbook_Tuesday_14_April_2026_13-42.md  Action_Playbook_Tuesday_14_April_2026_17-58.md  Action_Playbook_Tuesday_14_April_2026_18-01.md  (+18 more)
src/: __init__.py  main.py
src/agents/: base.py  (+7 more)
tests/: test_db.py  test_kpi.py
ui/: app.py
(+33 files in other folders)
